@@ -51,6 +51,7 @@ endif::[]
 - Rename `log_ecs_formatting` option to `log_ecs_reformatting`, deprecate old option name {pull}1248[#1248]
 - When the configuration value for `log_path` is set, override the `logger` to point to that path instead of using e.g. Rails logger {pull}1247[#1247]
 - Only send tracestate header for distributed tracing when it has content {pull}1277[#1277]
+- Use the hostname as the Kubernetes pod name in the Container Info metadata if the pod id is parsed from cgroup {pull}1314[#1314]
 
 ====== Fixed
 
